<?xml version="1.0"?>
<package format="2">
  <name>adhoc_simulations</name>
  <version>1.0.0</version>
  <description>Package of scripts for adhoc simulation launch</description>
  <maintainer email="siotrobotics@gmail.com">Decada Robotics</maintainer>
  <maintainer email="kaiwen@decadarobotics.com">Lam Kaiwen</maintainer>

  <license>Apache 2.0</license>
  <author email="scottcjx.w@gmail.com">Scott CJX</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <!-- <gazebo_ros gazebo_model_path="/home/gbtbedge001_admin/scott_spaces/simulations_ws/install/adhoc_simulations/share/adhoc_simulations/models"/> -->
  </export>

</package>
